--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Noto+Sans+Mono&family=Roboto:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@300;400;700&family=Noto+Sans+Mono&family=Roboto:wght@300;400;700&display=swap");
 
 :root {
   --green-color-4: #47a847;
+  --white-color-1: #fff;
+  --green-color-5: #1f7b1f;
 }
 .gray-color-1 {
   color: #818181;
@@ -15,7 +17,7 @@
   color: #207b20;
 }
 .green-color-2 {
-  color: #1f7b1f;
+  color: var(--green-color-5);
 }
 .green-color-3 {
   color: #2b9b2b;
@@ -25,6 +27,17 @@
 }
 .green-bg-color {
   background-color: #54d154;
+}
+.green-bg-color-2 {
+  background-color: #3eba3e;
+}
+
+.white-bg-color {
+  background-color: var(--white-color-1);
+}
+
+.gray-bg-color {
+  background-color: #f1f1f1;
 }
 
 header {
@@ -94,7 +107,7 @@ header section h1 {
   color: #fff;
 }
 
-header section button {
+.custom-btn-1 {
   background-color: #53d153;
   font: 1.4rem Roboto, sans-serif;
   color: #fff;
@@ -104,7 +117,7 @@ header section button {
   text-transform: uppercase;
 }
 
-header section button:hover {
+.custom-btn-1:hover {
   background: #46c046;
 }
 
@@ -131,10 +144,11 @@ header section button:hover {
 }
 
 .section-header-1 {
+  margin: 0;
+
   font: 1.3rem "Montserrat", sans-serif;
   letter-spacing: 4px;
   text-transform: uppercase;
-  margin: 40px 0 0 0;
 }
 
 .section-hr {
@@ -239,12 +253,201 @@ header section button:hover {
   color: #fff;
   padding: 10px 20px;
   text-transform: capitalize;
+  margin: 20px;
 }
 
 #gallery + button:hover {
   background-color: #1f841f;
 }
-@media screen and (min-width: 768px) {
+
+.carousel {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.carousel button {
+  font: 3rem Lilita One, cursive;
+  color: #dfdfdf;
+  background: #fff;
+  border: 0;
+}
+
+.carousel button:active {
+  color: #c5c5c5;
+}
+
+.carousel article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 5px;
+}
+.carousel article p {
+  max-width: 500px;
+  font: 1rem Roboto, sans-serif;
+  color: #444;
+}
+
+.carousel article h2,
+.carousel article p,
+.carousel article h3 {
+  margin: 0;
+}
+
+#user-card {
+  margin: 20px 0;
+  padding: 10px;
+}
+
+#user-card div {
+  border: 2px solid #e1e1e1;
+  border-radius: 100%;
+  float: left;
+  padding: 5px 7px;
+  margin-right: 5px;
+}
+
+#user-card h2 {
+  font: 1rem Roboto, sans-serif;
+  color: #444;
+  text-align: left;
+}
+
+#user-card h3 {
+  font: bold 1rem Roboto, sans-serif;
+  color: #ccc;
+  text-align: left;
+}
+
+#partners {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#partners div {
+  width: 150px;
+  height: 80px;
+  padding: 0 120px 0 0;
+}
+
+#partner-1 {
+  background: url("../img/partners/google.png") center no-repeat;
+}
+#partner-2 {
+  background: url("../img/partners/yahoo.png") center no-repeat;
+}
+#partner-3 {
+  background: url("../img/partners/microsoft.png") center no-repeat;
+}
+#partner-4 {
+  background: url("../img/partners/intel.png") center no-repeat;
+}
+#partner-5 {
+  background: url("../img/partners/qualcom.png") center no-repeat;
+}
+#partner-6 {
+  background: url("../img/partners/cisco.png") center no-repeat;
+}
+#partner-7 {
+  background: url("../img/partners/apple.png") center no-repeat;
+}
+#partner-8 {
+  background: url("../img/partners/asus.png") center no-repeat;
+}
+
+#section-4 button {
+  background: #dddcdc;
+  border: 0;
+  border-radius: 30px;
+  font: bold 1rem Roboto, sans-serif;
+  color: #a59d9d;
+  padding: 10px 20px;
+  text-transform: capitalize;
+  margin: 20px;
+}
+
+#section-4 button:active {
+  color: #fff;
+  background: #b2b2b2;
+}
+
+#team {
+  display: flex;
+  color: #fff;
+  flex-wrap: wrap;
+  justify-content: center;
+  font: 300 1rem Roboto, sans-serif;
+}
+
+#team article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 70px 0 0;
+}
+
+#memberPhoto1 {
+  background: url(../img/team/1.png) center/cover;
+}
+#memberPhoto2 {
+  background: url(../img/team/2.png) center/cover;
+}
+#memberPhoto3 {
+  background: url(../img/team/3.png) center/cover;
+}
+#memberPhoto4 {
+  background: url(../img/team/4.png) center/cover;
+}
+#memberPhoto5 {
+  background: url(../img/team/5.png) center/cover;
+}
+
+[id*="memberPhoto"] {
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  background-color: #fff;
+}
+
+.vl {
+  border-left: 2px solid var(--green-color-5);
+  height: 80px;
+  display: inline;
+  margin: 10px;
+}
+
+.socials {
+  display: flex;
+  background-color: #c5e9c5;
+  padding: 5px;
+  border-radius: 20px;
+}
+
+.socials div {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px 0 0;
+}
+
+.us {
+  background: url(../img/us.png) center/cover;
+}
+.be {
+  background: url(../img/be.png) center/cover;
+}
+div.tt {
+  background: url(../img/tt.png) center/cover;
+  margin: 0;
+}
+
+#section-5 button {
+  box-shadow: -2px 3px #38a93855;
+}
+
+@media screen and (min-width: 1024px) {
   .container {
     width: 1024px;
     margin: auto;
@@ -304,8 +507,40 @@ header section button:hover {
   .vh-100 {
     height: 100vh;
   }
-
+  .vh-80 {
+    height: 80vh;
+  }
+  .vh-50 {
+    height: 50vh;
+  }
+  .vh-20 {
+    height: 20vh;
+  }
   #work-options {
     margin: 60px 0;
   }
+
+  .carousel article {
+    padding: 0 80px;
+  }
+
+  #partners div:nth-child(4),
+  #partners div:nth-child(8) {
+    padding: 0;
+  }
+
+  #section-5 section > div {
+    height: 100%;
+  }
+
+  #team {
+    flex-wrap: initial;
+  }
 }
+
+/* 
+
+Selected font families:
+https://fonts.google.com/share?selection.family=Lilita%20One%7CMontserrat:wght@300;400;700%7CNoto%20Sans%20Mono%7CRoboto:wght@300;400;700
+
+*/
